--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -374,6 +374,7 @@
     </Compile>
     <Compile Include="Model\AuditLog\ReflectorEnumerator.cs" />
     <Compile Include="Model\AuditLog\ReflectorToString.cs" />
+    <Compile Include="Model\Databinding\ActionDocumentChangeListener.cs" />
     <Compile Include="Model\Databinding\Collections\ModificationsRowSource.cs" />
     <Compile Include="Model\Databinding\Entities\ColumnCaptions.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -399,13 +400,9 @@
     <Compile Include="Model\Databinding\SettingsEntities\SettingsCollection.cs" />
     <Compile Include="Model\Databinding\SettingsEntities\SettingsObject.cs" />
     <Compile Include="Model\Databinding\SettingsEntities\ScalarSettings.cs" />
-    <Compile Include="Model\DocumentContainers\DocumentSettings.cs" />
-    <Compile Include="Model\DocumentContainers\IDocumentSettingsContainer.cs" />
-    <Compile Include="Model\DocumentContainers\SettingsSnapshot.cs" />
+    <Compile Include="Model\Databinding\DocumentSettings.cs" />
+    <Compile Include="Model\Databinding\SettingsSnapshot.cs" />
     <Compile Include="Model\Databinding\SettingsEntities\StructuralModification.cs" />
-    <Compile Include="Model\DocumentContainers\DocumentSettingsContainer.cs" />
-    <Compile Include="Model\DocumentContainers\SkylineWindowDocumentSettingsContainer.cs" />
-    <Compile Include="Model\DocumentContainers\WritableDocumentSettingsContainer.cs" />
     <Compile Include="Model\ElementLocators\ElementLocator.cs" />
     <Compile Include="Model\ElementLocators\ListRef.cs" />
     <Compile Include="Model\DocSettings\FullScanAcquisitionMethod.cs" />
@@ -4987,6 +4984,7 @@
     </PublishFile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Model\DocumentContainers\" />
     <Folder Include="Model\Unifi\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
