--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -375,6 +375,7 @@
     <Compile Include="Model\AuditLog\ReflectorEnumerator.cs" />
     <Compile Include="Model\AuditLog\ReflectorToString.cs" />
     <Compile Include="Model\Databinding\Collections\ModificationsRowSource.cs" />
+    <Compile Include="Model\Databinding\Collections\ScalarSettingRowSource.cs" />
     <Compile Include="Model\Databinding\Entities\ColumnCaptions.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -397,7 +398,7 @@
     <Compile Include="Model\Databinding\SettingsEntities\Modification.cs" />
     <Compile Include="Model\Databinding\SettingsEntities\NeutralLoss.cs" />
     <Compile Include="Model\Databinding\SettingsEntities\PersistedSettings.cs" />
-    <Compile Include="Model\Databinding\SettingsEntities\SettingsCollection.cs" />
+    <Compile Include="Model\Databinding\SettingsEntities\ScalarSetting.cs" />
     <Compile Include="Model\Databinding\SettingsEntities\SettingsObject.cs" />
     <Compile Include="Model\Databinding\SettingsEntities\ScalarSettings.cs" />
     <Compile Include="Model\DocumentContainers\DocumentSettings.cs" />
