--- a/pwiz_tools/Skyline/Executables/Tools/CrossLinkerTool/CrossLinkerTool.csproj
+++ b/pwiz_tools/Skyline/Executables/Tools/CrossLinkerTool/CrossLinkerTool.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CrossLinkerTool</RootNamespace>
     <AssemblyName>CrossLinkerTool</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -106,6 +106,7 @@
     <Compile Include="PasteHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResidueFormulae.cs" />
     <EmbeddedResource Include="AddCrosslinksForm.resx">
       <DependentUpon>AddCrosslinksForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -122,6 +123,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -144,13 +146,18 @@
       <Name>SkylineTool</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ResidueFormulae.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>del "$(SolutionDir)$(TargetName).zip" 2&gt;nul</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>cd "$(SolutionDir)"
-"$(ProgramW6432)\7-zip\7z.exe" a $(TargetName).zip tool-inf ".\$(OutDir)$(TargetName).exe" ".\$(OutDir)$(TargetName).pdb" ".\$(OutDir)SkylineTool.dll" ".\$(OutDir)SkylineTool.pdb" ".\$(OutDir)pwiz.CommonUtil.dll" ".\$(OutDir)pwiz.CommonUtil.pdb"
+"$(ProgramW6432)\7-zip\7z.exe" a $(TargetName).zip tool-inf ".\$(OutDir)$(TargetName).exe" ".\$(OutDir)$(TargetName).pdb" ".\$(OutDir)SkylineTool.dll" ".\$(OutDir)SkylineTool.pdb" ".\$(OutDir)pwiz.CommonUtil.dll" ".\$(OutDir)pwiz.CommonUtil.pdb" ".\$(OutDir)ResidueFormulae.txt"
 
 rmdir /s /q "$(SolutionDir)\..\..\..\bin\$(PlatformName)\$(ConfigurationName)\Tools\$(TargetName)"
 
