--- a/pwiz_tools/Skyline/Test/Test.csproj
+++ b/pwiz_tools/Skyline/Test/Test.csproj
@@ -143,6 +143,8 @@
     <Compile Include="FastaSequenceTest.cs" />
     <Compile Include="FeatureTooltipTest.cs" />
     <Compile Include="PeptideTest.cs" />
+    <Compile Include="SkydApiTest.cs" />
+    <Compile Include="SkydFormatTest.cs" />
     <Compile Include="StripePainterTest.cs" />
     <Compile Include="ComplexFragmentIonTest.cs" />
     <Compile Include="ObjectSizeTest.cs" />
@@ -251,6 +253,10 @@
       <Project>{09FC3CB3-FCCD-4906-A370-160B28725936}</Project>
       <Name>ProteomeDb</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\SkylineApi\SkydbApi\SkydbApi.csproj">
+      <Project>{cd5b4c56-fa46-42a8-aa97-e08573f979e9}</Project>
+      <Name>SkydbApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CommonTest\CommonTest.csproj">
       <Project>{3F077244-13E5-4815-BA55-31F030042E06}</Project>
       <Name>CommonTest</Name>
@@ -315,6 +321,7 @@
     <EmbeddedResource Include="Study7.sky" />
     <EmbeddedResource Include="Study7_0-7.sky" />
     <EmbeddedResource Include="SmallMoleculesMzOnly_3-7.sky" />
+    <None Include="SkydFormatTest.zip" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
