--- a/pwiz_tools/Skyline/Skyline.csproj
+++ b/pwiz_tools/Skyline/Skyline.csproj
@@ -615,6 +615,7 @@
       <DependentUpon>FeatureTooltips.resx</DependentUpon>
     </Compile>
     <Compile Include="Model\Results\Scoring\AutoTrainManager.cs" />
+    <Compile Include="Model\Skydb\SkydbConverter.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -5444,6 +5445,10 @@
     <ProjectReference Include="..\Shared\zedgraph\ZedGraph.csproj">
       <Project>{b99650ee-af46-47b4-a4a9-212ade7809b7}</Project>
       <Name>ZedGraph</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SkylineApi\SkydbApi\SkydbApi.csproj">
+      <Project>{cd5b4c56-fa46-42a8-aa97-e08573f979e9}</Project>
+      <Name>SkydbApi</Name>
     </ProjectReference>
     <ProjectReference Include="SkylineCmd\SkylineCmd.csproj">
       <Project>{fa16a0ef-edf7-4515-bd93-44badd7ab98a}</Project>
