--- a/pwiz_tools/SkylineApi/SkydbApi/SkydbApi.csproj
+++ b/pwiz_tools/SkylineApi/SkydbApi/SkydbApi.csproj
@@ -50,11 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataApi\EntityIdMap.cs" />
     <Compile Include="DataApi\InsertScoreStatement.cs" />
     <Compile Include="DataApi\InsertStatement.cs" />
     <Compile Include="DataApi\SessionFactoryFactory.cs" />
     <Compile Include="DataApi\SkydbConnection.cs" />
-    <Compile Include="DataApi\SkydbReader.cs" />
+    <Compile Include="DataApi\SkydbJoiner.cs" />
     <Compile Include="DataApi\SkydbWriter.cs" />
     <Compile Include="DataApi\SkydbFile.cs" />
     <Compile Include="DataApi\SqliteOperations.cs" />
