--- a/pwiz_tools/Skyline/Test/Test.csproj
+++ b/pwiz_tools/Skyline/Test/Test.csproj
@@ -143,7 +143,6 @@
     <Compile Include="FastaSequenceTest.cs" />
     <Compile Include="FeatureTooltipTest.cs" />
     <Compile Include="PeptideTest.cs" />
-    <Compile Include="SkydApiTest.cs" />
     <Compile Include="SkydFormatTest.cs" />
     <Compile Include="StripePainterTest.cs" />
     <Compile Include="ComplexFragmentIonTest.cs" />
@@ -253,9 +252,13 @@
       <Project>{09FC3CB3-FCCD-4906-A370-160B28725936}</Project>
       <Name>ProteomeDb</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\SkylineApi\SkydbApi\SkydbApi.csproj">
+    <ProjectReference Include="..\..\SkylineApi\SkydbApi\SkylineApi.csproj">
       <Project>{cd5b4c56-fa46-42a8-aa97-e08573f979e9}</Project>
-      <Name>SkydbApi</Name>
+      <Name>SkylineApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SkylineApi\SkydbStorage\SkydbStorage.csproj">
+      <Project>{32a01481-f012-4b01-8edb-b2f01424844b}</Project>
+      <Name>SkydbStorage</Name>
     </ProjectReference>
     <ProjectReference Include="..\CommonTest\CommonTest.csproj">
       <Project>{3F077244-13E5-4815-BA55-31F030042E06}</Project>
