--- a/pwiz_tools/SkylineApi/SkydbStorage/SkydbStorage.csproj
+++ b/pwiz_tools/SkylineApi/SkydbStorage/SkydbStorage.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Internal\InsertScoreStatement.cs" />
     <Compile Include="Internal\InsertStatement.cs" />
     <Compile Include="Internal\MsDataSourceFileWriter.cs" />
+    <Compile Include="Internal\Orm\CandidatePeak.cs" />
     <Compile Include="Internal\SkydbConnection.cs" />
     <Compile Include="Internal\SkydbJoiner.cs" />
     <Compile Include="Internal\SkydbWriter.cs" />
@@ -71,8 +72,8 @@
     <Compile Include="Internal\Orm\ChromatogramGroup.cs" />
     <Compile Include="Internal\Orm\Chromatogram.cs" />
     <Compile Include="Internal\Orm\Entity.cs" />
-    <Compile Include="Internal\Orm\ExtractedChromatograms.cs" />
-    <Compile Include="Internal\Orm\ScanInfo.cs" />
+    <Compile Include="Internal\Orm\ExtractedFile.cs" />
+    <Compile Include="Internal\Orm\SpectrumInfo.cs" />
     <Compile Include="Internal\Orm\Scores.cs" />
     <Compile Include="Internal\Orm\SpectrumList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
