--- a/pwiz_tools/Skyline/Test/Test.csproj
+++ b/pwiz_tools/Skyline/Test/Test.csproj
@@ -142,6 +142,7 @@
     <Compile Include="ChromatogramExporterTest.cs" />
     <Compile Include="FastaSequenceTest.cs" />
     <Compile Include="FeatureTooltipTest.cs" />
+    <Compile Include="LoadBlibSpeedTest.cs" />
     <Compile Include="PeptideTest.cs" />
     <Compile Include="SkydFormatTest.cs" />
     <Compile Include="StripePainterTest.cs" />
