--- a/pwiz_tools/SkylineApi/SkydbStorage/SkydbStorage.csproj
+++ b/pwiz_tools/SkylineApi/SkydbStorage/SkydbStorage.csproj
@@ -59,17 +59,17 @@
     <Compile Include="Internal\DataUtil.cs" />
     <Compile Include="Internal\EntityIdMap.cs" />
     <Compile Include="Internal\HashCode.cs" />
-    <Compile Include="Internal\InsertIntoStatement.cs" />
     <Compile Include="Internal\InsertScoreStatement.cs" />
     <Compile Include="Internal\InsertSelectStatement.cs" />
     <Compile Include="Internal\InsertStatement.cs" />
     <Compile Include="Internal\ExtractedDataFileWriter.cs" />
     <Compile Include="Internal\Orm\CandidatePeak.cs" />
     <Compile Include="Internal\Orm\InstrumentInfo.cs" />
+    <Compile Include="Internal\Orm\Molecule.cs" />
+    <Compile Include="Internal\PreparedStatement.cs" />
     <Compile Include="Internal\SelectChromatogramStatement.cs" />
     <Compile Include="Internal\SelectIntoStatement.cs" />
     <Compile Include="Internal\SelectStatement.cs" />
-    <Compile Include="Internal\SkydbConnection.cs" />
     <Compile Include="Internal\SkydbJoiner.cs" />
     <Compile Include="Internal\SkydbSchema.cs" />
     <Compile Include="Internal\SkydbWriter.cs" />
