Working on fix for Issue 629: No import due to overlapping chromatogram start times If there are two copies of the same peptide in the document, and those peptides have different charge states, and different explicit retention times, we have to do something reasonable in terms of what time range to extract.

--- a/pwiz_tools/Skyline/TestFunctional/TestFunctional.csproj
+++ b/pwiz_tools/Skyline/TestFunctional/TestFunctional.csproj
@@ -175,6 +175,7 @@
     <Compile Include="DdaScoringTest.cs" />
     <Compile Include="DocumentGridUndoTest.cs" />
     <Compile Include="EncyclopeDiaLibraryMatchTest.cs" />
+    <Compile Include="ExplicitRetentionTimeTest.cs" />
     <Compile Include="IgnoreSimScansTest.cs" />
     <Compile Include="LegacyScoringModelTest.cs" />
     <Compile Include="LibraryMatchViewTest.cs" />
